# pysureau

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml  ruff.toml  settings.ini  setup.py
_docs/: climate_utils.html  climate_utils.html.md  conversions_utils.html  conversions_utils.html.md  modeling_options_utils.html  modeling_options_utils.html.md  parameter_validators.html  parameter_validators.html.md  plant_utils.html.md  prepare_soil_parameters.html  prepare_soil_parameters.html.md  pysureau_init.html  pysureau_init.html.md  pysureau_utils.html.md  search.json  sitemap.xml  soil_utils.html  soil_utils.html.md
_proc/: 00_core.html.md  00_core.ipynb  00_pysureau_utils.html.md  00_pysureau_utils.ipynb  00_soil_utils.html.md  00_soil_utils.ipynb  01_parameter_validators.html.md  01_parameter_validators.ipynb  01_soil_utils.html.md  01_soil_utils.ipynb  02_conversions_utils.html.md  02_conversions_utils.ipynb  02_plant_utils.html.md  02_plant_utils.ipynb  03_climate_utils.html.md  03_climate_utils.ipynb  03_soil_utils.html.md  03_soil_utils.ipynb  04_conversions_utils.html.md  04_conversions_utils.ipynb  04_plant_utils.html.md  04_plant_utils.ipynb  04_pysureau_utils.html.md  04_pysureau_utils.ipynb  05_climate_utils.html.md  05_climate_utils.ipynb  05_create_modeling_options.html.md  05_create_modeling_options.ipynb  05_modeling_options_utils.html.md  05_modeling_options_utils.ipynb  05_pysureau_init.html.md  05_pysureau_init.ipynb  06_modeling_options_utils.html.md  06_modeling_options_utils.ipynb  06_parameter_validators.html.md  06_pysureau_init.html.md  (+12 more)
(+65 files in other folders)
